--- a/content/posts/az-900.md
+++ b/content/posts/az-900.md
@@ -13,17 +13,20 @@ category: certification
 author:
   name: swaraj
   twitter: swalaxh
-  image: /images/bigheadkarngyan.png
+  image: /images/bighead.png
 ---
 
-# Traderet altera id subitis coeunt in haut
+Coming soon...
+
+<!--more-->
+
+
+<!-- # Traderet altera id subitis coeunt in haut
 
 ## Caespite veni et illos stamen pater aurum
 
 Lorem markdownum vulneris **humum** et mihi. Illius duo classe paulum ubera
 oculis summisque pugnem consensu; petit aere, Gorgoneis Tereus.
-
-<!--more-->
 
 ## Manibus posses
 
@@ -58,4 +61,4 @@ parvos, cadit.
 
 [Fretumque coetum]: http://www.inmensoshuc.io/bellumcultis.php
 [cera]: http://limosoque.io/decorhuius.html
-[ut dedere]: http://capillisredemit.org/etet
+[ut dedere]: http://capillisredemit.org/etet -->
